@@ -46,6 +46,8 @@ https://github.com/elastic/beats/compare/v6.4.0...6.x[Check the HEAD diff]
 - Fixed a crash in the file_integrity module under Linux. {issue}7753[7753]
 - Fixed the RPM by designating the config file as configuration data in the RPM spec. {issue}8075[8075]
 - Fixed a concurrent map write panic in the auditd module. {pull}8158[8158]
+- Fixed a data race in the file_integrity module. {issue}8009[8009]
+- Fixed a deadlock in the file_integrity module. {pull}8027[8027]
 
 *Filebeat*
 
